--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
     "embla-carousel-react": "^8.0.0-rc19",
     "react-intersection-observer": "^9.5.3",
     "@radix-ui/react-slot": "*",
-    "class-variance-authority": "*",
+    "class-variance-authority": "*"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
