--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@tanstack/react-query": "^5.14.2",
+    "@tanstack/react-query-devtools": "*",
     "zustand": "^4.4.7",
     "axios": "^1.6.2",
     "@stripe/stripe-js": "^2.4.0",
