--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@types/react-datepicker": "^4.19.4",
+    "@tailwindcss/forms": "*",
     "typescript": "^5.3.3",
     "tailwindcss": "^3.3.6",
     "postcss": "^8.4.32",
