--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "@types/react-datepicker": "^4.19.4",
     "@tailwindcss/forms": "*",
     "@tailwindcss/typography": "*",
+    "@tailwindcss/aspect-ratio": "*",
     "typescript": "^5.3.3",
     "tailwindcss": "^3.3.6",
     "postcss": "^8.4.32",
