--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,57 +15,60 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-slot": "*",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
     "@tanstack/react-query": "^5.14.2",
     "@tanstack/react-query-devtools": "*",
-    "zustand": "^4.4.7",
     "axios": "^1.6.2",
-    "@stripe/stripe-js": "^2.4.0",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
+    "class-variance-authority": "*",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "react-datepicker": "^4.25.0",
-    "react-select": "^5.8.0",
-    "react-hot-toast": "^2.4.1",
+    "embla-carousel-react": "^8.0.0-rc19",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0",
-    "next-themes": "^0.2.1",
+    "next": "^14.0.4",
     "next-intl": "^3.3.2",
-    "sharp": "^0.33.1",
-    "embla-carousel-react": "^8.0.0-rc19",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
-    "@radix-ui/react-slot": "*",
-    "class-variance-authority": "*"
+    "react-select": "^5.8.0",
+    "sharp": "^0.33.1",
+    "tailwind-merge": "^2.2.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@types/react-datepicker": "^4.19.4",
+    "@tailwindcss/aspect-ratio": "*",
     "@tailwindcss/forms": "*",
     "@tailwindcss/typography": "*",
-    "@tailwindcss/aspect-ratio": "*",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.3.6",
-    "postcss": "^8.4.32",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-datepicker": "^4.19.4",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1"
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.3.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
